Updated RestaurantServiceImpl to consistently use ResponseEntity<Response> as the return type for service methods.